; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-config.c_config_open.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-config.c_config_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.config* @config_open(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.config*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call %struct.config* @config_open_path(i8* %6, i8** %4, i64* %5)
  store %struct.config* %7, %struct.config** %3, align 8
  %8 = load %struct.config*, %struct.config** %3, align 8
  %9 = icmp ne %struct.config* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.config*, %struct.config** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call %struct.config* @config_init_data(%struct.config* %11, i8* %12, i64 %13)
  br label %16

15:                                               ; preds = %1
  br label %16

16:                                               ; preds = %15, %10
  %17 = phi %struct.config* [ %14, %10 ], [ null, %15 ]
  ret %struct.config* %17
}

declare dso_local %struct.config* @config_open_path(i8*, i8**, i64*) #1

declare dso_local %struct.config* @config_init_data(%struct.config*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
